--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "copy:scripts": "rimraf dist/scripts && cpy \"**/*\" \"../../dist/scripts\" --cwd=src/scripts --parents",
     "copy:webfonts": "rimraf dist/webfonts && cpy \"**/*\" \"../../dist/webfonts\" --cwd=src/webfonts --parents",
     "copy:images": "rimraf dist/images && cpy \"**/*\" \"../../dist/images\" --cwd=src/images --parents",
-    "build": "npm-run-all copy:* build:*",
+    "build": "npm-run-all clean copy:* build:*",
     "build:sass": "node-sass src/sass/style.scss --output-style compressed -o dist/css"
   },
   "author": "",
@@ -24,7 +24,6 @@
     "browser-sync": "^2.24.7",
     "browsersync": "0.0.1-security",
     "cpy-cli": "^2.0.0",
-    "globstar": "^1.0.0",
     "node-sass": "^4.9.3",
     "npm-run-all": "^4.1.3",
     "onchange": "^4.1.0",
