--- a/package.json
+++ b/package.json
@@ -29,5 +29,8 @@
     "npm-run-all": "^4.1.3",
     "onchange": "^4.1.0",
     "rimraf": "^2.6.2"
+  },
+  "dependencies": {
+    "tiny-slider": "^2.8.7"
   }
 }
